--- a/TSP/GeneticTSP/GeneticTSP.csproj
+++ b/TSP/GeneticTSP/GeneticTSP.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractClasses\CrossoverType.cs" />
     <Compile Include="AdjacencyMatrix.cs" />
     <Compile Include="Candidate.cs" />
     <Compile Include="Form1.cs">
