--- a/TSP/ClassTests/ClassTests.csproj
+++ b/TSP/ClassTests/ClassTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="AdjacencyMatrixTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolverTest.cs" />
+    <Compile Include="TournamentTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
