--- a/TSP/GeneticTSP/GeneticTSP.csproj
+++ b/TSP/GeneticTSP/GeneticTSP.csproj
@@ -52,6 +52,7 @@
     <Compile Include="AbstractClasses\CrossoverType.cs" />
     <Compile Include="AdjacencyMatrix.cs" />
     <Compile Include="Candidate.cs" />
+    <Compile Include="CrossoverTypes\PMXCrossover.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +61,7 @@
     </Compile>
     <Compile Include="GeneticSolver.cs" />
     <Compile Include="AbstractClasses\MutationType.cs" />
+    <Compile Include="MutationTypes\MutationPMX.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AbstractClasses\SelectionType.cs" />
