--- a/TSP/GeneticTSP/GeneticTSP.csproj
+++ b/TSP/GeneticTSP/GeneticTSP.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AbstractClasses\SelectionType.cs" />
+    <Compile Include="Result.cs" />
     <Compile Include="SelectionTypes\TournamentSelection.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
