--- a/TSP/GeneticTSP/GeneticTSP.csproj
+++ b/TSP/GeneticTSP/GeneticTSP.csproj
@@ -53,6 +53,7 @@
     <Compile Include="AdjacencyMatrix.cs" />
     <Compile Include="Candidate.cs" />
     <Compile Include="CrossoverTypes\PMXCrossover.cs" />
+    <Compile Include="Facade.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +68,9 @@
     <Compile Include="AbstractClasses\SelectionType.cs" />
     <Compile Include="Result.cs" />
     <Compile Include="SelectionTypes\TournamentSelection.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
