--- a/TSP/ClassTests/ClassTests.csproj
+++ b/TSP/ClassTests/ClassTests.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="AdjacencyMatrixTest.cs" />
     <Compile Include="MutationTest.cs" />
+    <Compile Include="OXTest.cs" />
     <Compile Include="PMXTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SolverTest.cs" />
