--- a/TSP/GeneticTSP/GeneticTSP.csproj
+++ b/TSP/GeneticTSP/GeneticTSP.csproj
@@ -52,6 +52,7 @@
     <Compile Include="AbstractClasses\CrossoverType.cs" />
     <Compile Include="AdjacencyMatrix.cs" />
     <Compile Include="Candidate.cs" />
+    <Compile Include="CrossoverTypes\OXCrossover.cs" />
     <Compile Include="CrossoverTypes\PMXCrossover.cs" />
     <Compile Include="Facade.cs" />
     <Compile Include="Form1.cs">
