--- a/TSP/ClassTests/ClassTests.csproj
+++ b/TSP/ClassTests/ClassTests.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdjacencyMatrixTest.cs" />
+    <Compile Include="Roulette.cs" />
+    <Compile Include="TransportMutationTest.cs" />
     <Compile Include="MutationTest.cs" />
     <Compile Include="OXTest.cs" />
     <Compile Include="PMXTest.cs" />
