--- a/TSP/GeneticTSP/GeneticTSP.csproj
+++ b/TSP/GeneticTSP/GeneticTSP.csproj
@@ -64,10 +64,12 @@
     <Compile Include="GeneticSolver.cs" />
     <Compile Include="AbstractClasses\MutationType.cs" />
     <Compile Include="MutationTypes\InversionMutation.cs" />
+    <Compile Include="MutationTypes\TranspositionMutation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AbstractClasses\SelectionType.cs" />
     <Compile Include="Result.cs" />
+    <Compile Include="SelectionTypes\RouletteSelection.cs" />
     <Compile Include="SelectionTypes\TournamentSelection.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
